--- a/wp-content/uploads/elementor/css/post-32115.css
+++ b/wp-content/uploads/elementor/css/post-32115.css
@@ -1182,7 +1182,7 @@ body.rtl .elementor-32115 .elementor-element.elementor-element-2d80051f {
 .elementor-32115 .elementor-element.elementor-element-7122f983>.elementor-motion-effects-container>.elementor-motion-effects-layer {
     background-color: #FFFFFF;
     background-image: url("/wp-content/uploads/2025/04/IMG_0688.webp");
-    background-position: top center;
+    background-position: center center;
     background-size: cover;
 }
 
